crates/plotnik-tests/tests/04-emit/types/alternations/error_conflict_skips_nested_scope_capture.txt
Q = [
  (identifier) @x
  {
    (string) @x
  } @row
  (number)* @x
]
------------------ DIAGNOSTICS -------------------
error: capture `@x` has incompatible types across branches
 --> query.ptk:2:16
  |
2 |   (identifier) @x
  |                ^^
...
6 |   (number)* @x
  |             -- and a different type here
  |
help: make every alternative produce the same type, or label the alternatives for a variant type
